Remove the loopback HTTP layer
Answers PRD Q10: no, it does not survive.

It was inherited from the template, where it existed to demonstrate a
Spring Boot context living behind a JavaFX app -- an embedded Tomcat on
127.0.0.1:8080 serving one /api/status endpoint, guarded by a
LoopbackHostFilter that validated the Host header on every path. It was
well-reasoned for what it was. Nothing in Data Blaster consumed it.

Keeping it would have meant maintaining a second bound port alongside the
one SOAP mode is going to bind, two port-conflict stories, and a
DNS-rebinding control on the server nobody asked for. That was the
argument that settled it.

Removed:
- web/, its two test classes, and spring-boot-starter-webmvc (the plain
  starter replaces it; Spring stays for DI and the bean lifecycle)
- the port-conflict fallback in init(), which was the most intricate
  start-up path in the project and existed solely so a taken port could
  not stop a desktop app from opening. init() is now three lines with no
  branching
- server.port/server.address/web-application-type from
  application.properties, and the web-application-type=none override
  five test classes carried because a plain context load would otherwise
  fail on any machine already running the app
- AppState.Snapshot, its volatile field, resnapshot(), and the four
  constructor listeners maintaining it. Its only reader was the web
  layer, so it was a record maintained on every write for nobody.

Kept: requireFxThread, and onFxThread as the escape hatch the guard's own
error message names. AppStateTest pins the absence of a read projection,
because the reflex answer to "the server needs this state" is to hand it
the live object -- which is exactly what the projection existed to
prevent.

The reasoning outlived the code and is recorded rather than deleted.
architecture.md keeps three pieces worth having when SOAP mode brings a
server: narrow a start-up retry to the specific cause and log it after
the replacement con